--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="../static/img/literature.png">
-	<link rel="icon" type="image/png" href="../static/img/literature.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/static/img/literature.png">
+	<link rel="icon" type="image/png" href="/static/img/literature.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Antigone - ENG2205</title>
@@ -47,7 +47,7 @@
     	</div>
     </nav>
 
-	<div class="page-header header-filter" data-parallax="true" style="background-image: url('../static/img/antigone_king.jpg');">
+	<div class="page-header header-filter" data-parallax="true" style="background-image: url('/static/img/antigone_king.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -73,7 +73,7 @@
 
 					<div class="section col-md-10 col-md-offset-1">
 						<div class="col-md-12 col-md-offset-1">
-							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="../static/img/antigone.jpg">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone.jpg">
 						</div>
 					</div>
 
@@ -87,7 +87,7 @@
 
 					<div class="section col-md-10 col-md-offset-1">
 						<div class="col-md-12 col-md-offset-1">
-							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="../static/img/antigone-scaled.jpg">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone-scaled.jpg">
 						</div>
 					</div>
 
@@ -99,7 +99,7 @@
 
 					<div class="section col-md-10 col-md-offset-1">
 						<div class="col-md-12 col-md-offset-1">
-							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="../static/img/antigone_polynices.jpg">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone_polynices.jpg">
 						</div>
 					</div>
 
@@ -146,7 +146,7 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="../static/img/chinguyet.png">
+											<img class="img" src="/static/img/chinguyet.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
@@ -163,7 +163,7 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="../static/img/chinguyet.png">
+											<img class="img" src="/static/img/chinguyet.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
@@ -180,7 +180,7 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="../static/img/chinguyet.png">
+											<img class="img" src="/static/img/chinguyet.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
@@ -197,7 +197,7 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="../static/img/chinguyet.png">
+											<img class="img" src="/static/img/chinguyet.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
@@ -214,7 +214,7 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="../static/img/chinguyet.png">
+											<img class="img" src="/static/img/chinguyet.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
@@ -231,7 +231,7 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="../static/img/chinguyet.png">
+											<img class="img" src="/static/img/chinguyet.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
@@ -281,15 +281,15 @@
 					<div class="col-md-4">
 						<h5>Instagram Feed</h5>
 						<div class="gallery-feed">
-							<img src="../static/img/square.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="../static/img/square1.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="../static/img/face.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="../static/img/square5.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/square.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/square1.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/face.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/square5.jpg" class="img img-raised img-rounded" alt="" />
 
-							<img src="../static/img/square2.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="../static/img/face1.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="../static/img/square3.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="../static/img/square4.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/square2.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/face1.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/square3.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/square4.jpg" class="img img-raised img-rounded" alt="" />
 						</div>
 
 					</div>
