--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h1 class="title">Antigone</h1>
-					<h4>Antigone” represents a clash of equally fair principles: state interest and family interest; both parties are equally right and at the same time wrong because of their one-sidedness. The destruction of Creon is worse than physical death. </h4>
+					<h4>Antigone (/ænˈtɪɡəni/ ann-TIG-ə-nee; Ancient Greek: Ἀντιγόνη) is a tragedy by Sophocles written in or before 441 BC.
+					Of the three Theban plays Antigone is the third in order of the events depicted in the plays, but it is the first that was written. The play expands on the Theban legend that predates it, and it picks up where Aeschylus' Seven Against Thebes ends. (Wikipedia)</h4>
 					<br />
 					<a href="#read_part" class="btn btn-rose btn-round btn-lg">
 						<i class="material-icons">format_align_left</i> Read
@@ -80,8 +81,6 @@
 					<div class="col-md-8 col-md-offset-2">
 						<h3 class="title">Antigone and feminism</h3>
 						<p>Antigone appears before the viewer with an already matured, irrevocably adopted decision, and no one cares how or when it arose. For all that, Sophocles not only convinces the viewer of the correctness of Antigone, but also inspires him with deep sympathy for the girl and admiration for her selflessness, intransigence, and fearlessness. The image of Antigone reveals the essence of crime and punishment, the tragedy of a person (Creon) (in that he did not listen to anyone). He misunderstood his rights and verestimated his capabilities. In emotional terms, the most tragic part of the fate of Antigone is the unjust sentence of Creon. Even physical death is not the main tragedy of Antigone: she was ready for both. In emotional terms, she perceives the complete loneliness in which she finds herself; more precisely, which Sophocles creates around her. Meanwhile, Antigone is not at all as lonely as she thinks: the demon refers to the ‘popular opinion’, which considers the girl worthy of the death penalty, not the death penalty, but the greatest glory. Also, the choir does not play any significant role in Antigone; songs, however, do not break away from the course of action and more or less adjoin drama situations. Of particular interest is the first stasim, in which the power and ingenuity of the human mind, conquering nature and organizing social life, is glorified. The choir ends with a warning: the power of the mind leads a person to both good and evil; therefore, traditional ethics should be followed (Gale). This song of the choir, which is extremely characteristic of the whole worldview of Sophocles, is like an author’s commentary on the tragedy, explaining the poet’s position on the conflict between “divine” and human law.</p>
-						<!-- <p> Trên iPhone 11 Pro Max, Apple nâng cấp chip xử lý nên giúp cho Face ID chạy nhanh hơn iPhone XS Max và iPhone X mình từng dùng. Hơi tiếc là nó vẫn chưa nhận diện được theo các phương khác, bạn vẫn phải dựng máy lên thì mới quét được. Trong khi đó, Face ID của iPad Pro có thể hoạt động ở bất kì hướng nào bạn cầm máy. Nhiều lúc nằm, cầm lộn chiều máy thì phải xoay lại mới xài được Face ID.</p>
-						<p> Camera của iPhone không làm mình thất vọng, đưa máy lên chụp là dính, là có ảnh đẹp. Mình rất tự tin khi cầm iPhone đi chụp hình lúc du lịch, đi chơi, ra đường, chụp ở nhà, chụp ngoại cảnh hay chụp chân dung hay chụp cái gì nó cũng chơi được. Hình chụp xong ra màu thật, mình thích kiểu này. Có điều màu xanh thì ra chưa đẹp như con Galaxy S20 Ultra mình đang dùng.</p> -->
 
     				</div>
 
@@ -106,7 +105,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<h3 class="title">Antigone And Creon′s Actions And Ideals</h3>
 						<p>In Antigone, Antigone braves through all of her hardships and decisions with her morals and set of values. She died with pride and no regret, for she died because she did what was morally right. Many Greek writers disagree with these traits that Sophocles gave her, but it is appropriate because she needed these traits to show defiance and be able to stand up for what is right. Antigone is a tragic heroine who believes in her duty to her family and is willing to sacrifice everything to do what is morally right. Antigone’s powerful foundation of her morals and values keeps all who try to stray her away from her task powerless. When Ismene tries to persuade her sister to stay away from burying Polynices. However, she earlier did not feel a lot of regret for what she did because she was doing what she was obligated to do. It was to her “meaningful” because she had given up her life for what her brother deserved and it was the will of the gods. Such strong emotions create a sense of feminism, which, in respect to the time of this play, was outrageous and not accepted. The image of women in plays and stories at the time were weak and powerless girls. Antigone’s representation of feminists broke all the images of play writers in Greece, and her strong characteristics defy the inappropriateness of her nature. Her boldness, bravery, and unyielding morals are all extremely important to her role in the play. Antigone has been given strong characteristics in her story, and because of this, she does not stand around while Creon’s unjust law insults Polynices.
-						<br /> <br />
+						<br/><br/>
 						Antigone’s death was the eventual outcome of her imprudent activities as her visually impaired enthusiasm, enormous hubris, and thoughtless disposition towards life at last filled in as a rationale for her childish actions. Because of her rash and reckless choices, Antigone’s discipline was appropriately merited. By violating the law for her self-centered reasons, covered by the more noteworthy need of the divine beings and Oikos, her intentions in helping through her activities ought not to be uplifting. Sophocles had the option to make a perplexing person with whom the crowd would have supported at this point tested. Since she was a lady, her powerful activities should be nonexistent and smothered by men, for example, with Creon, whose expectations were eventually to no end. The portrayal of Antigone endeavors to destroy the fantastic ability of the male-controlled society and prevails at it also on account of the crowd’s compassion as they identify with her battles. By defrauding Antigone, perusers will, in general, neglect how each activity has a result. When scrutinized, individuals’ activities can falter as dread replaces their craving to protect what is crucial to their ethics and morals.</p>
 
     				</div>
@@ -124,18 +123,6 @@
 									<span class="label label-primary">Literature</span>
 									<span class="label label-primary">Antigone</span>
 								</div>
-							</div>
-							<div class="col-md-6">
-								<a href="#pablo" class="btn btn-google btn-round pull-right">
-									<i class="fa fa-google"></i> 232
-								</a>
-								<a href="#pablo" class="btn btn-twitter btn-round pull-right">
-									<i class="fa fa-twitter"></i> 910
-								</a>
-								<a href="#pablo" class="btn btn-facebook btn-round pull-right">
-									<i class="fa fa-facebook-square"></i> 872
-								</a>
-
 							</div>
 						</div>
 
@@ -269,11 +256,11 @@
 						<div class="social-feed">
 							<div class="feed-line">
 								<i class="fa fa-twitter"></i>
-								<p>https://twitter.com/home</p>
+								<p>https://twitter.com/</p>
 							</div>
 							<div class="feed-line">
 								<i class="fa fa-facebook-square"></i>
-								<p>https://twitter.com/home</p>
+								<p>https://facebook.com/</p>
 							</div>
 						</div>
 					</div>
@@ -305,25 +292,10 @@
 					   Đào Trung Hiếu
 					</a>
 				</li>
-				<li>
-					<a href="#pablo">
-					   Khám phá
-					</a>
-				</li>
-				<li>
-					<a href="#pablo">
-						Chính sách và bảo hành
-					</a>
-				</li>
-				<li>
-					<a href="#pablo">
-						Liên hệ
-					</a>
-				</li>
 			</ul>
 
 			<div class="copyright pull-right">
-				Copyright &copy; <script>document.write(new Date().getFullYear())</script> Đào Trung Hiếu.
+				Đào Trung Hiếu <script>document.write(new Date().getFullYear())</script>.
 			</div>
 		</div>
 	</footer>
