--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 									Tags:
 									<span class="label label-primary">Literature</span>
 									<span class="label label-primary">Antigone</span>
+									<span class="label label-primary">Sophocles</span>
 								</div>
 							</div>
 						</div>
@@ -240,6 +241,8 @@
         </div>
     </div>
 
+	<div class="section">
+	</div>
 
 	<footer class="footer footer-black footer-big">
 		<div class="container">
