update html and readme

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="/static/img/literature.png">
-	<link rel="icon" type="image/png" href="/static/img/literature.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="static/img/literature.png">
+	<link rel="icon" type="image/png" href="static/img/literature.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Antigone - ENG2205</title>
@@ -249,24 +249,11 @@
 
 			<div class="content">
 				<div class="row">
-					<div class="col-md-4">
-						<h5>Về chúng tôi</h5>
+					<div class="col-md-8">
+						<h5>ABOUT US</h5>
 						<p>Em vào đời bằng đại lộ còn anh vào đời bằng lối nhỏ. Anh nhớ mình đã từng thổ lộ, anh nhớ rằng em đã chối bỏ. </p> <p>Anh nhớ chuyến xe buổi tối đó, trên xe chỉ có một người ngồi. Anh thấy thật buồn nhưng nhẹ nhõm, anh nhớ mình đã mỉm cười rồi. Anh nghĩ anh cần cảm ơn em, vì những gì mà anh đã nếm trải </p>
 					</div>
 
-					<div class="col-md-4">
-						<h5>Social media</h5>
-						<div class="social-feed">
-							<div class="feed-line">
-								<i class="fa fa-twitter"></i>
-								<p>https://twitter.com/</p>
-							</div>
-							<div class="feed-line">
-								<i class="fa fa-facebook-square"></i>
-								<p>https://facebook.com/</p>
-							</div>
-						</div>
-					</div>
 
 					<div class="col-md-4">
 						<h5>Instagram Feed</h5>
@@ -316,7 +303,7 @@
 							<div class="col-md-10 col-md-offset-1">
 								<div class="info info-horizontal">
 									<div class="icon icon-rose">
-										<i class="material-icons">timeline</i>
+										<i class="material-icons">label</i>
 									</div>
 									<div class="description">
 										<h4 class="info-title">COURSE NAME</h4>
@@ -328,7 +315,7 @@
 	
 								<div class="info info-horizontal">
 									<div class="icon icon-primary">
-										<i class="material-icons">local_shipping</i>
+										<i class="material-icons">code</i>
 									</div>
 									<div class="description">
 										<h4 class="info-title">CODE</h4>
@@ -340,7 +327,7 @@
 	
 								<div class="info info-horizontal">
 									<div class="icon icon-info">
-										<i class="material-icons">verified_user</i>
+										<i class="material-icons">person</i>
 									</div>
 									<div class="description">
 										<h4 class="info-title">INSTRUCTOR</h4>
@@ -357,9 +344,13 @@
 									<div class="description">
 										<h4 class="info-title">COURSE OBJECTIVES</h4>
 										<p class="description">
-											To introduce students to various masterpieces of world literature
+											To introduce students to various masterpieces of world literature.
+										</p>
+										<p class="description">
 											To examine literary works that have become the cornerstones of the world’s major literary
-											traditions
+											traditions.
+										</p>
+										<p class="description">
 											To enrich students’ cultural understanding by bringing them into contact with great literary
 											works created in different socio-cultural contexts.
 										</p>
