--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="static/img/literature.png">
-	<link rel="icon" type="image/png" href="static/img/literature.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/static/img/literature-50.png">
+	<link rel="icon" type="image/png" href="static/img/literature-50.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Antigone - ENG2205</title>
@@ -30,18 +30,16 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
         		</button>
-        		<a class="navbar-brand" >Antigone</a>
+        		<a class="navbar-brand">Antigone</a>
         	</div>
 
         	<div class="collapse navbar-collapse">
         		<ul class="nav navbar-nav navbar-right">
-
 					<li class="button-container">
 						<a target="_blank" class="btn btn-rose btn-round" data-toggle="modal" data-target="#signupModal">
 							<i class="material-icons">auto_stories</i> ENG 2205
 						</a>
 					</li>
-
         		</ul>
         	</div>
     	</div>
@@ -367,7 +365,11 @@
 
 </body>
 	<!--   Core JS Files   -->
-	<script src="../assets/js/jquery.min.js" type="text/javascript"></script>
-	<script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../assets/js/material.min.js"></script>
+	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="assets/js/material.min.js"></script>
+	<!--	Plugin for Tags, full documentation here: http://xoxco.com/projects/code/tagsinput/   -->
+	<script src="../assets/js/bootstrap-tagsinput.js"></script>
+	<!--    Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc    -->
+	<script src="assets/js/material-kit.js?v=1.2.1" type="text/javascript"></script>
 </html>
