--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<h4>Antigone (/ænˈtɪɡəni/ ann-TIG-ə-nee; Ancient Greek: Ἀντιγόνη) is a tragedy by Sophocles written in or before 441 BC.
 					Of the three Theban plays Antigone is the third in order of the events depicted in the plays, but it is the first that was written. The play expands on the Theban legend that predates it, and it picks up where Aeschylus' Seven Against Thebes ends. (Wikipedia)</h4>
 					<br />
-					<a href="#read_part" class="btn btn-rose btn-round btn-lg">
+					<a href="#read" class="btn btn-rose btn-round btn-lg">
 						<i class="material-icons">format_align_left</i> Read
 					</a>
 				</div>
@@ -61,7 +61,7 @@
 		</div>
 	</div>
 
-	<div id="read_part" class="main main-raised">
+	<div id="read" class="main main-raised">
 		<div class="container">
             <div class="section section-text">
                 <div class="row">
@@ -137,7 +137,7 @@
 									<div class="ripple-container"></div></div>
 								</div>
 								<div class="col-md-8">
-									<h4 class="card-title">Chị Nguyệt</h4>
+									<h4 class="card-title">Đinh Thị Ánh Nguyệt</h4>
 									<p class="description">
 										Em dạo này ổn không? Còn đi làm ở công ty cũ
 										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
@@ -149,12 +149,12 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="/static/img/chinguyet.png">
+											<img class="img" src="static/img/trang.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
 								<div class="col-md-8">
-									<h4 class="card-title">Chị Nguyệt</h4>
+									<h4 class="card-title">Phạm Thu Trang</h4>
 									<p class="description">
 										Em dạo này ổn không? Còn đi làm ở công ty cũ
 										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
@@ -166,12 +166,12 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="/static/img/chinguyet.png">
+											<img class="img" src="/static/img/dqkhanh.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
 								<div class="col-md-8">
-									<h4 class="card-title">Chị Nguyệt</h4>
+									<h4 class="card-title">Đào Quốc Khánh</h4>
 									<p class="description">
 										Em dạo này ổn không? Còn đi làm ở công ty cũ
 										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
@@ -183,12 +183,12 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="/static/img/chinguyet.png">
+											<img class="img" src="/static/img/quangluong.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
 								<div class="col-md-8">
-									<h4 class="card-title">Chị Nguyệt</h4>
+									<h4 class="card-title">Tạ Quang Lương</h4>
 									<p class="description">
 										Em dạo này ổn không? Còn đi làm ở công ty cũ
 										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
@@ -200,29 +200,12 @@
 								<div class="col-md-2">
 									<div class="card-avatar">
 										<a href="#pablo">
-											<img class="img" src="/static/img/chinguyet.png">
+											<img class="img" src="/static/img/hieu.png">
 										</a>
 									<div class="ripple-container"></div></div>
 								</div>
 								<div class="col-md-8">
-									<h4 class="card-title">Chị Nguyệt</h4>
-									<p class="description">
-										Em dạo này ổn không? Còn đi làm ở công ty cũ
-										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
-										Đồng nghiệp của em thế nào? Trong thang máy có chào với nhau?
-										Có nói qua nói lại, và những cuộc họp có đào bới nhau?.</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-2">
-									<div class="card-avatar">
-										<a href="#pablo">
-											<img class="img" src="/static/img/chinguyet.png">
-										</a>
-									<div class="ripple-container"></div></div>
-								</div>
-								<div class="col-md-8">
-									<h4 class="card-title">Chị Nguyệt</h4>
+									<h4 class="card-title">Đào Trung Hiếu</h4>
 									<p class="description">
 										Em dạo này ổn không? Còn đi làm ở công ty cũ
 										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
@@ -231,7 +214,6 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
     			</div>
             </div>
@@ -258,11 +240,11 @@
 						<div class="gallery-feed">
 							<img src="/static/img/square.jpg" class="img img-raised img-rounded" alt="" />
 							<img src="/static/img/square1.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="/static/img/face.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/chinguyet.png" class="img img-raised img-rounded" alt="" />
 							<img src="/static/img/square5.jpg" class="img img-raised img-rounded" alt="" />
 
 							<img src="/static/img/square2.jpg" class="img img-raised img-rounded" alt="" />
-							<img src="/static/img/face1.jpg" class="img img-raised img-rounded" alt="" />
+							<img src="/static/img/trang.png" class="img img-raised img-rounded" alt="" />
 							<img src="/static/img/square3.jpg" class="img img-raised img-rounded" alt="" />
 							<img src="/static/img/square4.jpg" class="img img-raised img-rounded" alt="" />
 						</div>
@@ -273,14 +255,6 @@
 
 
 			<hr />
-
-			<ul class="pull-left">
-				<li>
-					<a href="#pablo">
-					   Đào Trung Hiếu
-					</a>
-				</li>
-			</ul>
 
 			<div class="copyright pull-right">
 				Đào Trung Hiếu <script>document.write(new Date().getFullYear())</script>.
