--- a/antigone.html
+++ b/antigone.html
@@ -30,7 +30,7 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
         		</button>
-        		<a class="navbar-brand">Antigone</a>
+        		<a class="navbar-brand" href="antigone.html">Antigone</a>
         	</div>
 
         	<div class="collapse navbar-collapse">
