--- a/antigone.html
+++ b/antigone.html
@@ -125,8 +125,8 @@
 							</div>
 						</div>
 
-						<hr />
-
+						<hr/>
+						
 						<div class="card card-profile card-plain">
 							<div class="row">
 								<div class="col-md-2">
@@ -138,11 +138,7 @@
 								</div>
 								<div class="col-md-8">
 									<h4 class="card-title">Đinh Thị Ánh Nguyệt</h4>
-									<p class="description">
-										Em dạo này ổn không? Còn đi làm ở công ty cũ
-										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
-										Đồng nghiệp của em thế nào? Trong thang máy có chào với nhau?
-										Có nói qua nói lại, và những cuộc họp có đào bới nhau?.</p>
+									<p class="description"><br/><br/><br/></p>
 								</div>
 							</div>
 							<div class="row">
@@ -155,11 +151,7 @@
 								</div>
 								<div class="col-md-8">
 									<h4 class="card-title">Phạm Thu Trang</h4>
-									<p class="description">
-										Em dạo này ổn không? Còn đi làm ở công ty cũ
-										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
-										Đồng nghiệp của em thế nào? Trong thang máy có chào với nhau?
-										Có nói qua nói lại, và những cuộc họp có đào bới nhau?.</p>
+									<p class="description"><br/><br/><br/></p>
 								</div>
 							</div>
 							<div class="row">
@@ -172,11 +164,7 @@
 								</div>
 								<div class="col-md-8">
 									<h4 class="card-title">Đào Quốc Khánh</h4>
-									<p class="description">
-										Em dạo này ổn không? Còn đi làm ở công ty cũ
-										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
-										Đồng nghiệp của em thế nào? Trong thang máy có chào với nhau?
-										Có nói qua nói lại, và những cuộc họp có đào bới nhau?.</p>
+									<p class="description"><br/><br/><br/></p>
 								</div>
 							</div>
 							<div class="row">
@@ -189,11 +177,7 @@
 								</div>
 								<div class="col-md-8">
 									<h4 class="card-title">Tạ Quang Lương</h4>
-									<p class="description">
-										Em dạo này ổn không? Còn đi làm ở công ty cũ
-										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
-										Đồng nghiệp của em thế nào? Trong thang máy có chào với nhau?
-										Có nói qua nói lại, và những cuộc họp có đào bới nhau?.</p>
+									<p class="description"><br/><br/><br/></p>
 								</div>
 							</div>
 							<div class="row">
@@ -206,11 +190,7 @@
 								</div>
 								<div class="col-md-8">
 									<h4 class="card-title">Đào Trung Hiếu</h4>
-									<p class="description">
-										Em dạo này ổn không? Còn đi làm ở công ty cũ
-										Còn đi sớm về hôm mà đồng lương vẫn không khi đủ
-										Đồng nghiệp của em thế nào? Trong thang máy có chào với nhau?
-										Có nói qua nói lại, và những cuộc họp có đào bới nhau?.</p>
+									<p class="description"><br/><br/><br/></p>
 								</div>
 							</div>
 						</div>
