update icon color

--- a/antigone.html
+++ b/antigone.html
@@ -296,7 +296,7 @@
 								</div>
 
 								<div class="info info-horizontal">
-									<div class="icon icon-info">
+									<div class="icon icon-rose">
 										<i class="material-icons">favorite</i>
 									</div>
 									<div class="description">
