update source img

--- a/antigone.html
+++ b/antigone.html
@@ -50,7 +50,9 @@
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<h1 class="title">Antigone like a Feminist Heroine</h1>
-					<h4>Antigone is a tragedy by Sophocles written in or before 441 BC. Antigone is the third of the three Theban plays in terms of the events described in the plays, but it is the first to be written. The play continues Aeschylus' Seven Against Thebes and focuses on the Theban tale that preceded it. Whether the title character of the third tragedy in Sophocles' Theban trilogy is a feminist heroine is controversial. Take a look at the definitions of words like "feminist." Antigone appears to be more of a loyal (and highly outraged) grieving sister of a fallen, if ignoble ruler, Polynices, than a feminist heroine in her own right.)</h4>
+					<h4><br/>Antigone is a tragedy by Sophocles written in or before 441 BC. Antigone is the third of the three Theban plays in terms of the events described in the plays, but it is the first to be written. The play continues Aeschylus' Seven Against Thebes and focuses on the Theban tale that preceded it. Whether the title character of the third tragedy in Sophocles' Theban trilogy is a feminist heroine is controversial. Take a look at the definitions of words like "feminist." Antigone appears to be more of a loyal (and highly outraged) grieving sister of a fallen, if ignoble ruler, Polynices, than a feminist heroine in her own right.</h4>
+					<br />
+					<h5>Background: The Blind Oedipus Commending his Children to the Gods by Bénigne Gagneraux (1784).</h5>
 					<br />
 					<a href="#read" class="btn btn-rose btn-round btn-lg">
 						<i class="material-icons">format_align_left</i> Read
@@ -69,9 +71,10 @@
     					<p><br/>Antigone represents a clash of equally fair principles: state interest and family interest; both parties are equally suitable and at the same time wrong because of their one-sidedness. The destruction of Creon is worse than physical death. However, in this tragedy, there is only one winner-Antigone, who by her death predetermined the inevitable end of the tyrant who corrected all the laws of gods and justice. Antigone represents the ideal of love for her parents and noble selflessness, which led her to a tragic death. Creon, exclusively for demagogical and pedagogical purposes, ordered half of the enemies (supposedly the remains of a patriot) to be buried with honours and the other half (apparently the remains of a traitor) to be left in the desert for predators to eat. Both acts are state conventions, and only one thing is most important here: the authorities are lying and, at the same time, requiring that their lies be recognized as accurate under the pain of death. The paradox is that the seemingly weak, naive Antigone is omnipotent even in the face of death, and the seemingly powerful dictator Creon has become a miserable, powerless appeal of the crowd. In quantitative terms, the role of Antigone is very small-only about two hundred verses, almost two times less than that of Creon. Moreover, the entire last third of the tragedy, leading the action to the denouement, takes place action to the conclusion without her participation.</p>
 					</div>
 
-					<div class="section col-md-10 col-md-offset-1">
+					<div class="section col-md-8 col-md-offset-1">
 						<div class="col-md-12 col-md-offset-1">
-							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone.jpg">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone.png">
+							<h5 class="text-center">Antigone donnant la sépulture à Polynice by Sébastien Norblin (1825).</h5>
 						</div>
 					</div>
 
@@ -83,9 +86,10 @@
 
     				</div>
 
-					<div class="section col-md-10 col-md-offset-1">
+					<div class="section col-md-8 col-md-offset-1">
 						<div class="col-md-12 col-md-offset-1">
 							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone-scaled.jpg">
+							<h5 class="text-center">Antigone condemned to death by Creon by Giuseppe Diotti (1845).</h5>
 						</div>
 					</div>
 
@@ -97,9 +101,10 @@
 
     				</div>
 
-					<div class="section col-md-10 col-md-offset-1">
+					<div class="section col-md-8 col-md-offset-1">
 						<div class="col-md-12 col-md-offset-1">
 							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone_polynices.jpg">
+							<h5 class="text-center">Antigone in front of the dead Polynices by Nikiforos Lytras (1865).</h5>
 						</div>
 					</div>
 
@@ -107,9 +112,16 @@
 						<h3 class="title">The sacrifice of Antigone</h3>
 						<p><br/>In Antigone, Antigone braves through all of her hardships and decisions with her morals and set of values. She died with pride and no regret, for she died because she did what was morally right. Many Greek writers disagree with these traits that Sophocles gave her, but it is appropriate because she needed these traits to show defiance and stand up for what is right. Antigone is a tragic heroine who believes in her duty to her family and is willing to sacrifice everything to do morally right. Antigone's robust foundation of her morals and values keeps all who try to stray her away from her task powerless. When Ismene tries to persuade her sister to stay away from burying Polynices, however, she did not regret what she did earlier because she was doing what she was obligated to do. It was to her "meaningful" because she had given up her life for what her brother deserved, and it was the will of the gods. Such strong emotions create a sense of feminism, which was outrageous and not accepted in this play. The image of women in sports and stories at the time were weak and powerless girls. Antigone's representation of feminists broke all the pictures of play writers in Greece, and her strong characteristics defy the inappropriateness of her nature. Her boldness, bravery, and rigid morals are all essential to her role in the play. Antigone has been given strong characteristics in her story, and because of this, she does not stand around while Creon's unjust law insults Polynices.
 						<br/><br/>
-						Antigone's death was the eventual outcome of her imprudent activities as her visually impaired enthusiasm, enormous hubris, and thoughtless disposition towards life at last filled in as a rationale for her childish actions. Because of her rash and reckless choices, Antigone's discipline was appropriately merited. By violating the law for her self-centered reasons, covered by the more noteworthy need of the divine beings and Oikos, her intentions in helping through her activities ought not to be uplifting. Sophocles had the option to make a perplexing person with whom the crowd would have supported at this point tested. Since she was a lady, her powerful activities should be nonexistent and smothered by men, for example, with Creon, whose expectations were eventually to no end. The portrayal of Antigone endeavors to destroy the fantastic ability of the male-controlled society and prevails at it also on account of the crowd's compassion as they identify with her battles. By defrauding Antigone, peruses will, in general, neglect how each activity has a result. When scrutinized, individual activities can falter as dread replaces their craving to protect what is crucial to their ethics and morals.<br/><br/></p>
-
+						Antigone's death was the eventual outcome of her imprudent activities as her visually impaired enthusiasm, enormous hubris, and thoughtless disposition towards life at last filled in as a rationale for her childish actions. Because of her rash and reckless choices, Antigone's discipline was appropriately merited. By violating the law for her self-centered reasons, covered by the more noteworthy need of the divine beings and Oikos, her intentions in helping through her activities ought not to be uplifting. Sophocles had the option to make a perplexing person with whom the crowd would have supported at this point tested. Since she was a lady, her powerful activities should be nonexistent and smothered by men, for example, with Creon, whose expectations were eventually to no end. The portrayal of Antigone endeavors to destroy the fantastic ability of the male-controlled society and prevails at it also on account of the crowd's compassion as they identify with her battles. By defrauding Antigone, peruses will, in general, neglect how each activity has a result. When scrutinized, individual activities can falter as dread replaces their craving to protect what is crucial to their ethics and morals.</p>
     				</div>
+
+					<div class="section col-md-8 col-md-offset-1">
+						<div class="col-md-12 col-md-offset-1">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="/static/img/antigone_oedipus.jpg">
+							<h5 class="text-center">Oedipus and Antigone by Christoffer Wilhelm Eckersberg (1812).</h5>
+						</div>
+					</div>
+
 				</div>
 			</div>
 
