--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="static/hieutrungdao_resume.pdf"/>
+<iframe src="static/hieutrungdao_resume.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
